--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
     <head>
         <title>New Document</title>
     </head>
+
+
     <body>
         <!-- comment -->
-        <p>Hello World</p>
+        <h1>A Web Page</h1>
+        <p id="demo">A Paragraph</p>
+        <button type="button" onclick="myFunction()">Try it</button>
+
+
         
     </body>
+
+    <script src="index.js"></script>
 </html>
