--- a/hamburger-button/index.html
+++ b/hamburger-button/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburger Button</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <button>☰</button>
+    <button id="btn">☰</button>
 
-    <nav>
-        <li><a href="#">My-Github</a></li>
-        <li><a href="#">My-LinkedIn</a></li>
-        <li><a href="#">My-Youtube</a></li>
+    <nav id="nav">
+        <ul>
+            <li><a href="#">My-Github</a></li>
+            <li><a href="#">My-LinkedIn</a></li>
+            <li><a href="#">My-Youtube</a></li>
+        </ul>
+        
     </nav>
 </body>
 </html>
